--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.mvc.view.suffix=.jsp
 #指定服务端口
 server.port=8082
 
-spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://192.168.1.152:3306/ant?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=123
 spring.datasource.hikari.driver-class-name=com.mysql.jdbc.Driver
