--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,7 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -178,7 +179,7 @@
 		</dependency>
 
 		<!--引入commons-fileupload,文件上传时候用到的jar包 -->
-		<dependency>
+<!--		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.2.2</version>
@@ -187,6 +188,21 @@
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
+		</dependency>-->
+
+
+
+		<!--Druid依赖包-->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid</artifactId>
+			<version>1.0.25</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
 
 		<dependency>
@@ -207,6 +223,9 @@
 			<artifactId>solr-solrj</artifactId>
 			<version>6.6.2</version>
 		</dependency>
+
+
+
 
 	</dependencies>
 
