--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,45 @@
-spring.mvc.view.suffix=.jsp
-
 #指定服务端口
 server.port=8081
 
-spring.datasource.url=jdbc:mysql://localhost:3306/ant?useUnicode=true&characterEncoding=utf8
+# 主数据库
+spring.datasource.url=jdbc:mysql://localhost:3321/antclssroom?useUnicode=true&amp;characterEncoding=utf8&amp;emptyStringsConvertToZero=true
 spring.datasource.username=root
-spring.datasource.password=666
-spring.datasource.hikari.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.password=
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.testOnBorrow=true
+spring.datasource.validation-query=SELECT 1
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.initial-size=5
+spring.datasource.min-idle=5
+spring.datasource.max-active=20
+spring.datasource.maxWait=200000
+spring.datasource.timeBetweenEvictionRunsMillis=30000
+spring.datasource.minEvictableIdleTimeMillis=30000
+spring.datasource.validationQuery=SELECT 1 FROM DUAL
+spring.datasource.testWhileIdle=true
+spring.datasource.testOnReturn=false
+spring.datasource.poolPreparedStatements=true
+spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
+spring.datasource.filters=stat,wall,log4j
+spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+#超过时间限制是否回收
+spring.datasource.removeAbandoned=true
+#超时时间；单位为秒。180秒=3分钟
+spring.datasource.removeAbandonedTimeout=5
+
+
+# 从数据源
+spring.slave.type=com.alibaba.druid.pool.DruidDataSource
+spring.slave.driver-class-name=com.mysql.jdbc.Driver
+spring.slave.url=jdbc:mysql://localhost:3322/antclssroom?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.slave.username=root
+spring.slave.password=
+spring.slave.initial-size=5
+spring.slave.min-idle=5
+spring.slave.max-active=20
+
+
+
 
 
 mybatis.config-locations=classpath:mybatis/mybatis-config.xml
@@ -60,18 +93,3 @@ mongo.riteTimeout=0
 
 mongo.writeFsync=true
 
-
-
-
-spring.jpa.database=mysql
-
-datasource.master.url=jdbc:mysql://192.168.199.235:3306/lovewhf?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-datasource.master.driverClassName=com.mysql.jdbc.Driver
-datasource.master.username=root
-datasource.master.password=root
-
-
-datasource.slave.url=jdbc:mysql://localhost:3306/lovewhf?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-datasource.slave.driverClassName=com.mysql.jdbc.Driver
-datasource.slave.username=root
-datasource.slave.password=root
